--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/programingfy
+spring.datasource.url=jdbc:postgresql://localhost:5432/logusletter
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
