--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/logusletter
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${AWSRDB_MYSQL_DB_HOST:localhost}:${AWSRDB_MYSQL_DB_PORT:3306}/db_logos_letter
+spring.datasource.username=${AWSRDB_MYSQL_DB_USER:root}
+spring.datasource.password=${AWSRDB_MYSQL_DB_PASS:root}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
